tests/ui/transmute-mut-src-not-intobytes.msrv.stderr
error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> $DIR/transmute-mut-src-not-intobytes.rs:23:36
   |
23 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `Src`
   |
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
